# airwave

./: .dockerignore  .env.example  .gitignore  .replit  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  airport.ron  config.example.toml  config.toml  docker-compose.yml  generate-cert.sh  index.html  justfile  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prod-config.toml  replit.nix  rustfmt.toml  tsconfig.json  vite.config.ts  world-x.ron  zellij-debug.kdl  zellij-record.kdl  zellij.kdl
.cargo/: config.toml
.obsidian/: workspace.json
assets/: airport.ron  eula
assets/airports/: default.lua  ksfo.lua
assets/prompts/: air.json  ground.json  readback.json
assets/prompts/tasks/: AIR.json  GROUND.json  PREFIX.json  altitude.json  go-around.json  heading.json  resume.json  speed.json  takeoff.json
assets/worlds/: airport.lua
build_assets/linux/: client.sh  demo.sh  server.sh  singleplayer.sh
build_assets/shared/: config.toml
build_assets/windows/: client.bat  demo.bat  server.bat  singleplayer.bat
calculator/: Cargo.toml
calculator/src/: main.rs
client-web/: index.html  package.json  vite.config.ts
client-web/bindings/: Aircraft.ts  AircraftState.ts  AircraftTargets.ts  Airport.ts  Airspace.ts  Duration.ts  FlightPlan.ts  FlightSegment.ts  Frequencies.ts  Gate.ts  LandingState.ts  Line.ts  Node.ts  NodeBehavior.ts  NodeKind.ts  OutgoingCommandReply.ts  Runway.ts  TCAS.ts  TaxiingState.ts  Taxiway.ts  Terminal.ts  VORData.ts  Vec2.ts  World.ts
client-web/src/: Airport.scss  Airport.tsx  App.tsx  Canvas.tsx  Chatbox.tsx  Flights.scss  Flights.tsx  FreqSelector.scss  FreqSelector.tsx  GameButtons.tsx  Points.tsx  StripBoard.scss  StripBoard.tsx  index.tsx  style.scss
client-web/src-tauri/: tauri.conf.json
client-web/src/component/canvas/: Canvas.tsx
client-web/src/lib/: api.ts  atoms.ts  colors.ts  hooks.ts  lib.ts  types.ts
client-web/src/styles/: vars.scss
client-web/src/whisper/: WhisperSTT.ts
docs/: Draft.md  TODO.md  book.toml
docs/src/: SUMMARY.md  airwave.md  installation.md
docs/src/getting-started/: gameplay.md  installation.md  interface.md
docs/src/reference/: commands.md
editor/: Cargo.toml  world-x.ron
editor/src/: compile.rs  debugger.rs  draw.rs  lib.rs  main.rs  model.rs  viewer.rs  watcher.rs
engine/: Cargo.toml
engine-old/src/: engine.rs
engine-old/src/objects/: command.rs
engine/src/: assets.rs  command.rs  compile.rs  engine.rs  geometry.rs  job.rs  lib.rs  line.rs  main.rs  marker.rs  parser.rs  pathfinder.rs  structs.rs  wayfinder.rs  wordify.rs
engine/src/entities/: aircraft.rs  airport.rs  airspace.rs  flight.rs  mod.rs  order.rs  purchaseable.rs  world.rs
engine/src/entities/aircraft/: actions.rs  effects.rs  events.rs  mod.rs
engine/src/objects/: aircraft.rs  airport.rs  airspace.rs  command.rs  mod.rs  world.rs
map-viewer/: Cargo.toml
map-viewer/src/: entity_constructor.rs  lib.rs  main.rs
serve/: Cargo.toml
serve/src/: main.rs
server/: Cargo.toml  airport.ron  airport_example.ron  main.go
server/map_viewer/: Cargo.toml
server/map_viewer/src/: entity_constructor.rs  lib.rs  main.rs
server/prompts/: air.json  classifier.json  ground.json  main.json  readback.json  splitter.json
server/prompts/tasks/: AIR.json  ALL.json  GROUND.json  PREFIX.json  altitude.json  approach.json  arrival.json  clearance.json  delete.json  depart.json  direct.json  direction-of-travel.json  frequency.json  go-around.json  heading.json  ident.json  land.json  line-up.json  resume.json  speed.json  takeoff.json  taxi-continue.json  taxi-hold.json  taxi.json
server/server/: Cargo.toml
server/server/src/: main.rs
server/shared/: Cargo.toml
server/shared/src/: engine.rs  lib.rs  structs.rs
server/src/: assets.rs  config.rs  dump_prompts.rs  engine.rs  http.rs  job.rs  lib.rs  main.rs  message.rs  parser.rs  prompt.txt  prompter.rs  ring.rs  runner.rs  server.rs  signal_gen.rs  structs.rs
server/src/airport/: cross_roads.rs  mod.rs  new_v_pattern.rs  parallel.rs  tutorial.rs  v_pattern.rs
server/src/http/: mod.rs  shared.rs
server/src/http/methods/: aircraft.rs  comms.rs  flights.rs  misc.rs  mod.rs  state.rs
src/: App.tsx  Canvas.tsx  Chatbox.tsx  FreqSelector.tsx  RadarSwitch.tsx  StripBoard.tsx  app.tsx  atoms.ts  index-old.ts  index.ts  index.tsx  style.scss  types.ts
src/lib/: atoms.ts  lib.ts  types.ts
