[workspace]
resolver = "2"
members = ["engine", "server", "editor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
license = "AGPL"

[workspace.dependencies]
# tracing = { version = "0.1.40", features = ["release_max_level_info"] }
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-broadcast = "0.7.1"
async-channel = "2"
directories = "6"
glam = { version = "0.30.3", features = ["serde"] }
internment = { version = "0.8.5", features = ["serde"] }
itertools = "0.14.0"
mlua = { version = "0.10.3", features = ["vendored", "lua54", "serialize"] }
petgraph = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
ts-rs = "10.1.0"
turborand = "0.10.1"

[workspace.dependencies.clap]
version = "4"
default-features = false
features = ["std", "help", "usage", "error-context", "suggestions", "derive"]
