[package]
name = "editor"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }

clap.workspace = true
glam.workspace = true
serde_json.workspace = true
serde.workspace = true

mlua = { version = "0.10.3", features = ["lua54", "serialize"] }
nannou = "0.19.0"
nannou_egui = "0.19.0"
notify = "8.0.0"
