[package]
name = "editor"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }

clap.workspace = true
glam.workspace = true
mlua.workspace = true
serde_json.workspace = true
serde.workspace = true

nannou = "0.19.0"
nannou_egui = "0.19.0"
notify = "8.0.0"
