[package]
name = "engine"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
glam.workspace = true
turborand.workspace = true

tokio.workspace = true

async-channel.workspace = true
async-broadcast.workspace = true

serde.workspace = true
serde_json.workspace = true
internment.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
petgraph.workspace = true
itertools = "0.13.0"
