[package]
name = "engine"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
async-broadcast.workspace = true
async-channel.workspace = true
glam.workspace = true
internment.workspace = true
itertools.workspace = true
petgraph.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
turborand.workspace = true
ts-rs.workspace = true
mlua.workspace = true
