[package]
name = "map-viewer"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
engine = { path = "../engine" }

nannou = "0.19.0"
serde_json.workspace = true
glam.workspace = true
turborand.workspace = true
petgraph.workspace = true

serde.workspace = true
thiserror = "1"
nannou_egui = "0.19.0"
clap = { workspace = true, features = ["derive"] }
notify = "6.1.1"
