[package]
name = "serve"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

rust-embed = "8"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "net", "macros"]

[dependencies.axum]
version = "0.7.5"
default-features = false
features = ["tokio", "tower-log", "tracing", "http1", "http2"]

[dependencies.tower-http]
version = "0.5.2"
features = ["trace", "cors", "fs"]
