[package]
name = "server"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }

clap.workspace = true

axum = { version = "0.7.5", features = ["macros"] }
reqwest = { version = "0.12.5", features = ["multipart"] }
tokio.workspace = true
tokio-tungstenite = "0.23.1"

async-openai = "0.23.4"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }

futures-util = "0.3.30"
async-channel.workspace = true
async-broadcast.workspace = true

glam.workspace = true
turborand.workspace = true

serde.workspace = true
serde_json = "1"
internment.workspace = true

thiserror.workspace = true

toml = "0.8.19"
dotenv = "0.15.0"
tracing.workspace = true
tracing-subscriber.workspace = true
