[package]
name = "server"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "dump_prompts"
path = "src/dump_prompts.rs"

[[bin]]
name = "airwave"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }

async-broadcast.workspace = true
async-channel.workspace = true
clap.workspace = true
directories.workspace = true
glam.workspace = true
internment.workspace = true
itertools.workspace = true
mlua.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
turborand.workspace = true

async-openai = "0.28.1"
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
regex = "1.11"
serde_json = "1"
toml = "0.8.19"
union-find = "0.4.3"

[dependencies.tower-http]
version = "0.6.2"
features = ["cors", "fs", "trace", "compression-br"]
