[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.23.4"
axum = { version = "0.7.5", features = ["multipart"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["multipart"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
simple-whisper = "0.1.1"
uuid = { version = "1.10.0", features = ["v4"] }

shared.path = "../shared"

rand.workspace = true
glam.workspace = true
serde.workspace = true
